--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,44 @@
   </head>
   <body>
     <header class="container-fluid fixed top"></header>
+    <div class="row">
+      <div
+        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+      ></div>
+      <a href="{% url 'home' %}" class="nav-link-logo-link">
+        <h2 class="logo-font text-black my-0">String Theory</h2>
+      </a>
+      <div
+        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+      >
+        <form method="GET" action="">
+          <div class="input-group w-100">
+            <input
+              class="form-control border border-black rounded-0"
+              type="text"
+              name="q"
+              palceholder="Search our site"
+            />
+            <div class="input-group-append">
+              <button
+                class="form-control btn btn-black border border-black rounded-0"
+                type="submit"
+              >
+                <span class="icon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div
+        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
+      > <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+        <li class="list-inline-item dropdown"></li>
+        <li class=list-inline-item"></li>
+      </ul></div>
+    </div>
     {% if messages%}
     <div class="message-container"></div>
     {% endif %} {% block page_header %}
