--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta hhtp-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
     {% endblock %} {% block extra_meta %}{% endblock %} {% block corecss%}
     <link
@@ -17,6 +17,10 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %} {% block extra_css %}{% endblock %} {% block corejs %}
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
@@ -33,83 +37,73 @@
       integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/188f55f490.js" crossorigin="anonymous"></script>
     {% endblock %} {% block extra_js %}{% endblock %}
 
     <title>String Theory {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed top"></header>
-    <div class="row">
-      <div
-        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
-      ></div>
-      <a href="{% url 'home' %}" class="nav-link-logo-link">
-        <h2 class="logo-font text-black my-0">String Theory</h2>
-      </a>
-      <div
-        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
-      >
-        <form method="GET" action="">
-          <div class="input-group w-100">
-            <input
-              class="form-control border border-black rounded-0"
-              type="text"
-              name="q"
-              palceholder="Search our site"
-            />
-            <div class="input-group-append">
-              <button
-                class="form-control btn btn-black border border-black rounded-0"
-                type="submit"
-              >
-                <span class="icon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </button>
+    <header class="container-fluid fixed-top">
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <h2 class="logo-font text-black my-0">String Theory</h2>
+                </a>
             </div>
-          </div>
-        </form>
-      </div>
-      <div
-        class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left"
-      > <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-            <li class="list-inline-item dropdown">
-                <a class="text=black nav-link" href="#" id="user-options>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                > 
-                    <div class="text-center">
-                        <div><i class=""fas fa-user fa-lg></i></div>
-                        <p class="my-0">My Account</p>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
                     </div>
-                </a> 
-                <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                    {% if request.user.is_authenticated %}
-                        {% if request.user.is_superuser %}
-                            <a href="" class="dropdown-item">Product Management</a>
-                        {% endif %}
-                        <a href="" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Log Out</a>
-                    {% else %}
-                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                    {% endif %}
-                </div>
-            </li>
-        <li class=list-inline-item">
-        <a class="{% if grand_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link" href="">
-            <div class="text_center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                <p class="my-0">
-                        {% if grand_total %}
-                            £{{ grand_total|floatformat:2}}
-                        {% else %}
-                            £0.00
-                        {% endif %}
-                </p>
+                </form>
             </div>
-        </a>
-        </li>
-      </ul></div>
-    </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                <a href="" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Log Out</a>
+                            {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                <p class="my-0">
+                                {% if grand_total %}
+                                    £{{ grand_total|floatformat:2}}
+                                {% else %}
+                                    £0.00
+                                {% endif %}
+                        </p>
+                    </div>
+                </a>
+                </li>
+            </ul></div>
+        </div>
+        </div>
+    </header>
     {% if messages%}
     <div class="message-container"></div>
     {% endif %} {% block page_header %}
