--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,11 +3,15 @@ html {
 }
 
 body {
-  background: url("/media/background_example.jpg") no-repeat center center fixed;
-  background-size: cover;
-  height: calc(100vh - 164px);
+  background-color: #fff7ec;
+  height: auto;
   color: #555;
   font-family: "Lato";
+  position: relative; /* Important for absolute positioning of background */
+}
+
+.header-container {
+  position: relative; /* Ensure header is above the background */
 }
 
 .icon {
