--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
       src="https://kit.fontawesome.com/188f55f490.js"
       crossorigin="anonymous"
     ></script>
+    <script src="{% static 'js/script.js' %}"></script>
     {% endblock %} {% block extra_js %}{% endblock %}
 
     <title>String Theory {% block extra_title %}{% endblock %}</title>
@@ -58,18 +59,16 @@
         </div>
         <div class="col-auto">
           <ul class="list-inline list-unstyled my-0">
-            <li class="list-inline-item">
-              <div class="input-group">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search"/>
-                <div class="input-group-append">
-                  <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                    <span class="icon">
-                      <i class="fas fa-search"></i>
-                    </span>
-                  </button>
-                </div>
-              </div>
-            </li>
+            <!-- Search bar -->
+            <li class="list-inline-item dropdown">
+                <a class="text-black nav-link" href="#" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <div class="text-center">
+                    <div><i class="fas fa-search fa-lg"></i></div>
+                    <p class="my-0">Search</p>
+                  </div>
+                </a>
+              </li>
+            <!-- User Account -->
             <li class="list-inline-item dropdown">
               <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
@@ -90,6 +89,7 @@
                 {% endif %}
               </div>
             </li>
+            <!-- Shopping bag -->
             <li class="list-inline-item">
               <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                 <div class="text-center">
