--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,11 +5,15 @@ html {
 body {
   background-color: #fff7ec;
   height: auto;
-  color: #555;
-  font-family: "Lato";
+  font-family: "Lato", Arial, Helvetica;
   position: relative; /* Important for absolute positioning of background */
 }
 
+.title {
+  font-family: "Lobster", Arial, Helvetica;
+  color: #a67c00 !important;
+  size: 3rem;
+}
 .header-container {
   position: relative; /* Ensure header is above the background */
 }
@@ -87,33 +91,87 @@ body {
 
 /* -------------------------------- Search Bar */
 
+.button {
+  display: inline-block;
+  margin: 4px 2px;
+  background-color: #444;
+  font-size: 14px;
+  padding-left: 32px;
+  padding-right: 32px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.button:hover {
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+}
+
 .search-container {
   position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
+  display: inline-block;
+  margin: 4px 2px;
+  height: 50px;
+  width: 50px;
+  vertical-align: bottom;
 }
 
-.search-box {
+.searchbutton {
   position: absolute;
-  right: 10px;
-  transition: all 0.4s ease-in-out;
-  overflow: hidden;
-  width: 0;
-  opacity: 0;
-  display: flex;
-  align-items: center;
-}
-
-.search-box input {
+  font-size: 22px;
   width: 100%;
-  border: 1px solid #ddd;
-  padding: 5px;
-  border-radius: 4px;
+  margin: 0;
+  padding: 0;
 }
 
-.search-box.expanded {
-  width: calc(100% - 50px); /* Adjust dynamically */
-  opacity: 1;
+.search:focus + .searchbutton {
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+}
+
+.search {
+  position: absolute;
+  left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
+  background-color: white;
+  outline: none;
+  border: none;
+  padding: 0;
+  width: 0;
+  height: 100%;
+  z-index: 10;
+  transition-duration: 0.4s;
+  -moz-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+  -o-transition-duration: 0.4s;
+}
+
+.search:focus {
+  width: 363px; /* Bar width+1px */
+  padding: 0 16px 0 0;
+}
+
+.expandright {
+  left: auto;
+  right: 49px; /* Button width-1px */
+}
+
+.expandright:focus {
+  padding: 0 0 0 16px;
 }
