--- a/templates/base.html
+++ b/templates/base.html
@@ -47,26 +47,26 @@
     <script src="{% static 'js/script.js' %}"></script>
     {% endblock %} {% block extra_js %}{% endblock %}
 
-    <title>String Theory {% block extra_title %}{% endblock %}</title>
+    <title class="title">String Theory {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
       <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
         <div class="col-auto">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="logo-font text-black my-0">String Theory</h2>
+            <h2 class="logo-font text-black my-0 title">String Theory</h2>
           </a>
         </div>
         <div class="col-auto">
           <ul class="list-inline list-unstyled my-0">
             <!-- Search bar -->
             <li class="list-inline-item dropdown">
-                <a class="text-black nav-link" href="#" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="text-center">
-                    <div><i class="fas fa-search fa-lg"></i></div>
-                    <p class="my-0">Search</p>
+                <div class="search-container">
+                    <form action="/search" method="get">
+                      <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
+                      <label class="button searchbutton" for="searchright"><i class="fas fa-search fa-lg"></i></label>
+                    </form>
                   </div>
-                </a>
               </li>
             <!-- User Account -->
             <li class="list-inline-item dropdown">
