--- a/static/css/base.css
+++ b/static/css/base.css
@@ -175,3 +175,25 @@ body {
 .expandright:focus {
   padding: 0 0 0 16px;
 }
+
+/* -------------------------------- Nav Drop Downs */
+
+.navbar {
+  padding-top: 50px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+nav {
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+
+nav .col {
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
