--- a/templates/base.html
+++ b/templates/base.html
@@ -128,15 +128,95 @@
             </div>
             {% endfor %}
         </div> -->
-        <nav class="row navbar">
-            <div class="col text-center">Menu 1<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 2<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 3<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 4<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 5<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 6<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 7<i class="fa-solid fa-chevron-down"></i></div>
-            <div class="col text-center">Menu 8<i class="fa-solid fa-chevron-down"></i></div>
+        <nav class="row navbar text-center d-flex justify-content-between">
+            <div class="dropdown show col ">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+              <div class="dropdown show col">
+                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
         </nav>
         <hr>
       </div>
