chore: dropdowns in nav menus now lists not divs

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,93 +129,92 @@
             {% endfor %}
         </div> -->
         <nav class="row navbar text-center d-flex justify-content-between">
-            <div class="dropdown show col ">
+            <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
               <div class="dropdown show col">
                 <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
-              
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
               </div>
         </nav>
         <hr>
