--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ body {
   height: auto;
   font-family: "Lato", Arial, Helvetica;
   position: relative; /* Important for absolute positioning of background */
+  color: #1f1f1f;
 }
 
 .title {
@@ -56,7 +57,7 @@ body {
 }
 
 .text-black {
-  color: #000 !important;
+  color: #1f1f1f !important;
 }
 
 .border-black {
