--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
       <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
         <div class="col-auto">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="logo-font text-black my-0 title">String Theory</h2>
+            <h2 class="logo-font my-0 title">String Theory</h2>
           </a>
         </div>
         <div class="col-auto">
