feat: search button styling

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
         <div class="col-auto">
           <ul class="list-inline list-unstyled my-0">
             <!-- Search bar -->
-            <li class="list-inline-item dropdown">
+            <li class="list-inline-item">
                 <div class="search-container">
                     <form action="/search" method="get">
                       <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
