--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,14 +95,12 @@ body {
 .button {
   display: inline-block;
   margin: 4px 2px;
-  background-color: #444;
   font-size: 14px;
   padding-left: 32px;
   padding-right: 32px;
   height: 50px;
   line-height: 50px;
   text-align: center;
-  color: white;
   text-decoration: none;
   cursor: pointer;
   -moz-user-select: none;
@@ -117,8 +115,7 @@ body {
   -moz-transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
-  background-color: white;
-  color: black;
+  color: #a67c00;
 }
 
 .search-container {
@@ -143,16 +140,14 @@ body {
   -moz-transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
-  background-color: white;
-  color: black;
 }
 
 .search {
   position: absolute;
   left: 49px; /* Button width-1px (Not 50px/100% because that will sometimes show a 1px line between the search box and button) */
-  background-color: white;
   outline: none;
   border: none;
+  border-bottom: 2px solid #1f1f1f;
   padding: 0;
   width: 0;
   height: 100%;
@@ -161,6 +156,8 @@ body {
   -moz-transition-duration: 0.4s;
   -webkit-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
+  color: #1f1f1f;
+  background-color: #fff7ec;
 }
 
 .search:focus {
