--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
             <!-- User Account -->
             <li class="list-inline-item dropdown">
               <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div class="text-center">
+                <div class="text-center gold">
                   <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My Account</p>
                 </div>
@@ -92,7 +92,7 @@
             <!-- Shopping bag -->
             <li class="list-inline-item">
               <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                <div class="text-center">
+                <div class="text-center gold">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                   <p class="my-0">
                     {% if grand_total %} £{{ grand_total|floatformat:2}} 
