--- a/templates/base.html
+++ b/templates/base.html
@@ -54,13 +54,13 @@
       <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
         <div class="col-auto">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="logo-font my-0 title">String Theory</h2>
+            <h2 class="my-0 title">String Theory</h2>
           </a>
         </div>
         <div class="col-auto">
           <ul class="list-inline list-unstyled my-0">
             <!-- Search bar -->
-            <li class="list-inline-item">
+            <li class="list-inline-item mr-2">
                 <div class="search-container">
                     <form action="/search" method="get">
                       <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
@@ -69,7 +69,7 @@
                   </div>
               </li>
             <!-- User Account -->
-            <li class="list-inline-item dropdown">
+            <li class="list-inline-item dropdown mr-2">
               <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center gold">
                   <div><i class="fas fa-user fa-lg"></i></div>
