--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
+        <!-- Logo -->
       <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
         <div class="col-auto">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
