fix: hr and created main-nav/mobile top header

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,6 +19,8 @@
             >Shop Now</a
           >
         </h4>
+        <div><hr class="center-diamond"></div>
+        
       </div>
     </div>
   </div>
