--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
         </div> -->
         <nav class="row navbar text-center d-flex justify-content-between">
             <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -142,7 +142,7 @@
                 </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -153,7 +153,7 @@
                   </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -164,7 +164,7 @@
                   </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -175,7 +175,7 @@
                 </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -186,7 +186,7 @@
                 </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
               
@@ -197,7 +197,7 @@
                 </ul>
               </div>
               <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursorhover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
