feat: main nav boilerplate added and included

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,121 +105,9 @@
           </ul>
         </div>
       </div>
-      <div>
-            <!-- django logic to loop through list
-            <div class="row">
-            {% for title in dropdown_titles %}
-            <div class="col text-center">
-              <div class="dropdown">
-                <a 
-                  href="#" 
-                  class="nav-link dropdown-toggle" 
-                  id="dropdownMenu{{ forloop.counter }}" 
-                  data-toggle="dropdown" 
-                  aria-haspopup="true" 
-                  aria-expanded="false">
-                  {{ title }}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu{{ forloop.counter }}">
-                  <a class="dropdown-item" href="#">Option 1</a>
-                  <a class="dropdown-item" href="#">Option 2</a>
-                  <a class="dropdown-item" href="#">Option 3</a>
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-        </div> -->
-        <nav class="row navbar text-center d-flex justify-content-between">
-            <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-              <div class="dropdown show col">
-                <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
-                </a>
-              
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </div>
-        </nav>
-        <hr>
-      </div>
+    {% include 'includes/mobile-top-header.html' %}
+    {% include 'includes/main-nav.html' %}
+    <hr>
     </header>
     {% if messages%}
     <div class="message-container"></div>
