--- a/templates/base.html
+++ b/templates/base.html
@@ -50,9 +50,9 @@
     <title class="title">String Theory {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
-        <!-- Logo -->
-      <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
+    <header class="container-fluid fixed-top desktop-header d-none d-lg-flex">
+        <!--base.html  Logo -->
+      <div id="topnav" class="row pt-lg-2 justify-content-between align-items-center">
         <div class="col-auto">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
             <h2 class="my-0 title">String Theory</h2>
@@ -104,15 +104,13 @@
             </li>
           </ul>
         </div>
+            <!-- Main navigation for larger screens -->
+            {% include 'includes/main-nav.html' %}
       </div>
-    {% include 'includes/mobile-top-header.html' %}
-    {% include 'includes/main-nav.html' %}
-    <hr>
-    <div class="row text-center" id="delivery-banner">
-        <div class="col bg-black text-white">
-            <h4 class="logo-font my-1">Free delivery on orders over £{{ free-shipping-threshold }}!</h4>
-        </div>    
-    </div>
+    </header>
+    <header class="mobile-header d-flex d-lg-none">
+        <!-- Mobile top header for smaller screens -->
+        {% include 'includes/mobile-top-header.html' %}
     </header>
     {% if messages%}
     <div class="message-container"></div>
