--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,143 +1,96 @@
-<div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item ">By Rating</a>
-                <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
-            </div>
-        </li>
+<!-- Buttons and dropdowns for selecting items-->
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+<div class="container">
+    <div class="row navbar text-center d-flex justify-content-between">
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
-            </div>
-        </li>
-    </ul>
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
+            </a>
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
+            </a>
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
+            </a>
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+        <div class="dropdown show col">
+            <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
+            </a>
+        
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-
-<nav class="row navbar text-center d-flex justify-content-between">
-    <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none cursor-hover" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-      <div class="dropdown show col">
-        <a class="text-reset text-decoration-none dropdown-toggle" id="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Menu 4<i class="fa-solid fa-chevron-down fa-fw"></i>
-        </a>
-      
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </div>
-</nav>
 
             <!-- django logic to loop through list
             <div class="row">
