--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,115 +1,57 @@
 <div class="container header-container">
     <div class="col">
         <!-- mobile-top-header.html Logo -->
-        <div id="topnav" class="row pt-lg-2 d-none d-lg-flex justify-content-between align-items-center">
+        <div id="topnav" class="row pt-lg-2 justify-content-between align-items-center">
             <div class="col-auto">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
                 <h2 class="my-0 title">String Theory</h2>
             </a>
         </div>
     </div>
-</div>
-<div class="col-auto">
-    <ul class="list-inline list-unstyled my-0">
-      <!-- Search bar -->
-      <li class="list-inline-item mr-2">
-          <div class="search-container">
-              <form action="/search" method="get">
-                <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
-                <label class="button searchbutton" for="searchright"><i class="fas fa-search fa-lg"></i></label>
-              </form>
+    <div class="col-auto">
+        <ul class="list-inline list-unstyled my-0">
+        <!-- Search bar -->
+        <li class="list-inline-item mr-2">
+            <div class="search-container">
+                <form action="/search" method="get">
+                    <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
+                    <label class="button searchbutton" for="searchright"><i class="fas fa-search fa-lg"></i></label>
+                </form>
+                </div>
+            </li>
+        <!-- User Account -->
+        <li class="list-inline-item dropdown mr-2">
+            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="text-center gold">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0">My Account</p>
+            </div>
+            </a>
+            <div class="dropdown-menu border-0 dropdown-menu-right" aria-labelledby="user-options">
+            {% if request.user.is_authenticated %} 
+                {% if request.user.is_superuser %}
+                    <a href="" class="dropdown-item">Product Management</a>
+                {% endif %}
+                <a href="" class="dropdown-item">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item">Log Out</a>
+            {% else %}
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+            {% endif %}
             </div>
         </li>
-      <!-- User Account -->
-      <li class="list-inline-item dropdown mr-2">
-        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center gold">
-            <div><i class="fas fa-user fa-lg"></i></div>
-            <p class="my-0">My Account</p>
-          </div>
-        </a>
-        <div class="dropdown-menu border-0 dropdown-menu-right" aria-labelledby="user-options">
-          {% if request.user.is_authenticated %} 
-              {% if request.user.is_superuser %}
-                  <a href="" class="dropdown-item">Product Management</a>
-              {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Log Out</a>
-          {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-          {% endif %}
-        </div>
-      </li>
-      <!-- Shopping bag -->
-      <li class="list-inline-item">
-        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-          <div class="text-center gold">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-            <p class="my-0">
-              {% if grand_total %} £{{ grand_total|floatformat:2}} 
-              {% else %} £0.00 {% endif %}
-            </p>
-          </div>
-        </a>
-      </li>
-    </ul>
-  </div>
-<!-- <ul>
-    <li class="list-inline-item">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-search fa-lg"></i></div>
-              <p class="my-0">Search</p>
-          </div>
-      </a>
-      <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-          <form class="form" method="GET" action="">
-              <div class="input-group w-100">
-                  <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
-                  <div class="input-group-append">
-                      <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
-                          <span class="icon">
-                              <i class="fas fa-search"></i>
-                          </span>
-                      </button>
-                  </div>
-              </div>
-          </form>
-      </div>
-  </li>
-  <li class="list-inline-item dropdown">
-      <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="text-center">
-              <div><i class="fas fa-user fa-lg"></i></div>
-              <p class="my-0">My Account</p>
-          </div>
-      </a>
-      <div class="dropdown-menu border-0" aria-labelledby="user-options">
-          {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-                  <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
-              {% endif %}
-              <a href="" class="dropdown-item">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-          {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-          {% endif %}
-      </div>
-  </li>
-  <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none" href="">
-          <div class="text-center">
-              <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-              <p class="my-0">
-                  {% if grand_total %}
-                      ${{ grand_total|floatformat:2 }}
-                  {% else %}
-                      $0.00
-                  {% endif %}
-              </p>
-          </div>
-      </a>
-    </li>
-  </ul> -->
+        <!-- Shopping bag -->
+        <li class="list-inline-item">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+            <div class="text-center gold">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0">
+                {% if grand_total %} £{{ grand_total|floatformat:2}} 
+                {% else %} £0.00 {% endif %}
+                </p>
+            </div>
+            </a>
+        </li>
+        </ul>
+    </div>
+</div>
