--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
             {% include 'includes/main-nav.html' %}
       </div>
     </header>
-    <header class="mobile-header d-flex d-lg-none">
+    <header class="mobile-header">
         <!-- Mobile top header for smaller screens -->
         {% include 'includes/mobile-top-header.html' %}
     </header>
