--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,40 +1,84 @@
-<header class="container-fluid fixed-top header-container"> <div class="row align-items-center">
-    <nav class="navbar navbar-expand-lg navbar-light col-4 col-md-1"> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-expanded="false">
-                        Dropdown link
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                       </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="col-4 text-center"> <a href="{% url 'home' %}" class="main-logo-link">
-            <h2 class="my-0 title">String Theory</h2>
-        </a>
-    </div>
-
-    <div class="col-4 text-right"> 
-        <ul class="list-inline mb-0">
-            <li class="list-inline-item icon">
-                    <form action="/search" method="get">
-                        <i class="fas fa-search fa-lg"></i>
-                    </form>
-            </li>
-            <li class="list-inline-item icon">
-                <a href="/cart" class="text-black">
-                    <i class="fas fa-shopping-bag fa-lg"></i>
+<header class="container-fluid fixed-top header-container">
+    <div class="row d-flex justify-content-between align-items-center h-100">
+            <div class="align-items-center col">
+                <nav class="navbar-expand-lg navbar-light col-md-1 text-left">
+                    <!-- Hamburger Button -->
+                    <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                    >
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Collapsible Navigation Menu -->
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <!-- First Dropdown Menu -->
+                        <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdownMenuLink1"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            Menu 1
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                        </li>
+                
+                        <!-- Second Dropdown Menu -->
+                        <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdownMenuLink2"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            Menu 2
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                        </li>
+                    </ul>
+                    </div>
+                </nav>
+            </div>
+            <!-- Logo -->
+            <div class="text-center mt-2 col"> 
+                <a href="{% url 'home' %}" class="main-logo-link">
+                    <h2 class="my-0 title">String Theory</h2>
                 </a>
-            </li>
-        </ul>
+            </div>
+            <!-- Icons -->
+            <div class=" text-right col"> 
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item icon">
+                            <form action="/search" method="get">
+                                <i class="fas fa-search fa-lg"></i>
+                            </form>
+                    </li>
+                    <li class="list-inline-item icon">
+                        <a href="/cart" class="text-black">
+                            <i class="fas fa-shopping-bag fa-lg"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-</div>
 </header>
