chore: cleaned css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -223,17 +223,11 @@ body {
   padding-left: 0px;
 }
 nav {
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
+  padding: 0px;
 }
 
 nav .col {
-  padding-top: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
+  padding: 0px;
 }
 
 .cursor-hover {
