--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,10 +107,6 @@ body {
     max-width: 33.333333%;
     text-align: center;
   }
-  .collapse {
-    width: 430px !important;
-    height: 932px !important;
-  }
 }
 
 /* Desktop Styles (992px and up) */
@@ -215,64 +211,23 @@ body {
 }
 
 /* -------------------------------- Nav Drop Downs */
-
-.navbar {
-  padding-top: 50px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  padding-left: 0px;
-}
-nav {
-  padding: 0px;
-}
-
-nav .col {
-  padding: 0px;
-}
-
 .cursor-hover {
   cursor: pointer;
 }
 
-/* stops burger pushing down page */
 .collapse {
-  position: fixed;
-  top: 0px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1050;
   background-color: #fff7ec;
-  border-right: 6px solid #1f1f1f;
-  border-bottom: 6px solid #1f1f1f;
   overflow-y: auto;
 }
 
-.navbar-nav {
-  flex-direction: column; /* Stack links vertically */
-  margin-left: 25px;
+.test {
+  width: 400px !important;
 }
 
-.burger {
-  margin-top: 8px;
+.dropdown {
+  width: 200px;
 }
 
-.btn-close {
-  background-color: #fff7ec;
-  border: none;
-  font-size: 1.5rem;
-  line-height: 1;
-  color: #1f1f1f;
-  opacity: 0.8;
-  margin-top: 10px;
-  margin-left: 10px;
-  padding: 0;
-  z-index: 1100;
-}
-
-.dropdown-menu {
-  width: 95%;
-}
 /* -------------------------------- page divider */
 
 .center-diamond {
