--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -25,17 +25,30 @@
             <div class="collapse navbar-collapse test" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu 1
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu 1<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink1">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu 2
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu 2<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink2">
                             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -43,8 +56,8 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Menu 3
+                        <a class="nav-link" href="#" id="navbarDropdownMenuLink3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu 3<i class="fa-solid fa-chevron-down fa-fw"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="navbarDropdownMenuLink3">
                             <li><a class="dropdown-item" href="#">Action</a></li>
@@ -52,125 +65,12 @@
                         </ul>
                     </li>
                 </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    <form class="d-flex searchbar-mobile">
+                        <input class="form-control mr-1" type="search" placeholder="Type to Search..." aria-label="Search">
+                        <button class="btn btn-outline" type="submit"><i class="fas fa-search fa-lg"></i></button>
                     </form>
+                    <div><hr class="center-diamond"></div>
             </div>
         </div>
     </nav>
 </header>
-<!--
-    <nav class="navbar-expand-lg navbar-light col-md-1 text-left burger">
-                    <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarNav"
-                    aria-controls="navbarNav"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                    >
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <button
-                                type="button"
-                                class="btn-close"
-                                style="top: 10px; right: 10px;"
-                                data-toggle="collapse"
-                                data-target="#navbarNav"
-                                aria-label="Close"
-                                ><i class="fa-solid fa-xmark"></i></button>
-                    <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="navbarDropdownMenuLink1"
-                            role="button"
-                            data-toggle="dropdown"
-                            aria-expanded="false"
-                        >
-                            Menu 1
-                        </a>
-                        <div class="dropdown-menu sub-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink1" >
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                        </li>
-                
-                        <li class="nav-item dropdown">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="navbarDropdownMenuLink2"
-                            role="button"
-                            data-toggle="dropdown"
-                            aria-expanded="false"
-                        >
-                            Menu 2
-                        </a>
-                        <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdownMenuLink2">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdownMenuLink2"
-                                role="button"
-                                data-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Menu 3
-                            </a>
-                            <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdownMenuLink2">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                            </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdownMenuLink2"
-                                role="button"
-                                data-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Menu 4
-                            </a>
-                            <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdownMenuLink2">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                            </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdownMenuLink2"
-                                role="button"
-                                data-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Menu 5
-                            </a>
-                            <div class="dropdown-menu sub-menu" aria-labelledby="navbarDropdownMenuLink2">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                            </li>                
-                    </ul>
-                    <div><hr class="center-diamond"></div>
-                    </div>
-                </nav>
--->
